--- a/less/site/variables.less
+++ b/less/site/variables.less
@@ -16,8 +16,8 @@
 @second: spin(@danger, 300);
 
 @default: #baa;
-@base-1 : #dde;
-@base-2 : #aab;
+@base-1 : lighten(@base-2, 20%);
+@base-2 : #d47639;
 @dark: #333;
 @bright: #eee;
 
