--- a/css/site.css
+++ b/css/site.css
@@ -2567,16 +2567,11 @@ input[type="radio"] + label:before {
   background: none no-repeat right #e6b08d;
   min-width: 80px;
 }
-.select span.arrow {
-  background-color: #e6b08d;
-  color: #eee;
-  position: absolute;
-  z-index: 5;
-  right: 0;
+.select:after {
+  font-family: 'FontAwesome';
+  content: "\f063";
   padding: 0 0.5em;
-}
-.select span.arrow:after {
-  content: "▼";
+  color: #eee;
 }
 .select select {
   border: 1px solid #baa;
